--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h> hi </h>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+
+  <body>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="project.html">Projects</a>
+    <a href="contact.html">Contact Me</a>
+    <script src="script.js"></script>
+  </body>
+</html>
