--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
   </head>
 
   <body>
+    <a href = "index.html"><img src = "https://pngimg.com/uploads/letter_j/letter_j_PNG25.png" style="width:50px;height:50px;"></a>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="project.html">Projects</a>
     <a href="contact.html">Contact Me</a>
     <script src="script.js"></script>
   </body>
+
+  <style>
+    body {
+      background-color: white;
+    }
+    a:link{
+      color: black;
+    }
+    a:hover{
+      color: blue;
+    }
+    a:visited{
+      color: orange;
+    }
+  </style>
 </html>
