--- a/index.html
+++ b/index.html
@@ -8,15 +8,29 @@
   </head>
 
   <body>
+    <nav>
+
     <a href = "index.html"><img src = "https://pngimg.com/uploads/letter_j/letter_j_PNG25.png" style="width:50px;height:50px;"></a>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="project.html">Projects</a>
     <a href="contact.html">Contact Me</a>
+    
+
+    </nav>
+
+    <header>
+        <h1> Hello, </h1>
+        <p> I'm Josiah, a Singaporean Student who is keen to learn more about the Technology Industry. </p>
+    </header>
+
+
+
     <script src="script.js"></script>
   </body>
 
   <style>
+    /*for normal content*/
     body {
       background-color: white;
     }
@@ -29,5 +43,10 @@
     a:visited{
       color: orange;
     }
+    a{
+      text-decoration: none;
+    }
+
+    /*for flexbox*/
   </style>
 </html>
