--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <h1> Hello, </h1>
             <p> I'm Josiah, a Singaporean Student who is keen </p>
             <p>to learn more about the Technology Industry. </p>
-            
+            <a class = a href="about.html">Learn More ></a>
+
         </header>
     
         <img class = "img" src = "https://image.freepik.com/free-photo/desktop-source-code-wallpaper-by-computer-language-with-coding-programming_33771-595.jpg">
@@ -59,7 +60,12 @@
       width: 526px;
       height: 314px;
     }
-
+    .a{
+        text-decoration: none;
+        padding: 0px !important;
+        color: orange !important;
+        font-size: 16px;
+    }
     /*for flexbox*/
     .container {
       display: flex;
@@ -71,6 +77,7 @@
     }
     .flex1 {
       background-color: black; 
+      font-family: Arial;
     }
     .flex2 { 
       font-family: Arial;
