Added normalize css to the htmls

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="normalize.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -17,6 +17,10 @@
         <a href="contact.html">Contact Me</a>
 
     </nav>
+
+    <section>
+        <header>About Me</header>
+    </section>
 
     <style>
         /*for normal content*/
