adding images from folder to html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class = "flex1">
 
-    <a href = "index.html"><img src = "ID/J-image.jpg" style="width:65px;height:65px;"></a>
+    <a href = "index.html"><img src = "Images/J-image.jpg" style="width:65px;height:65px;"></a>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="project.html">Projects</a>
