--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <body>
     <nav class = "flex1">
 
-        <a href = "index.html"><img src = "https://ak.picdn.net/shutterstock/videos/1012879622/thumb/1.jpg" style="width:65px;height:65px;"></a>
+        <a href = "index.html"><img src = "Images/J-image.jpg" style="width:65px;height:65px;"></a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="project.html">Projects</a>
