adding 2nd image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         </header>
     
-        <img class = "img" src = "https://image.freepik.com/free-photo/desktop-source-code-wallpaper-by-computer-language-with-coding-programming_33771-595.jpg">
+        <img class = "img" src = "Images/code.jpg">
     
     </section>
 
