--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <body>
     <nav class = "flex1">
 
-        <a href ="index.html"><img src = "Images/J-image.jpg" style="width:65px;height:65px;"></a>
+        <a href ="index.html"><img src = "Images/J-image.jpg" alt = "jimage" style="width:65px;height:65px;"></a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="project.html">Projects</a>
@@ -25,20 +25,20 @@
     <style>
         /*for normal content*/
         body {
-          background-color: white;
+            background-color: white;
         }
         a:link{
-          color: white;
+            color: white;
         }
         a:visited{
-          color: orange;
+            color: orange;
         }
         a:hover{
-          color: blue;
+            color: blue;
         }
         a{
-          text-decoration: none;
-          padding: 30px;
+            text-decoration: none;
+            padding: 30px;
         }
          
 
@@ -52,8 +52,8 @@
           
         }*/
         .flex1 {
-          background-color: black; 
-          font-family: Arial;
+            background-color: black; 
+            font-family: Arial;
         }
         /*.flex2 { 
           font-family: Arial;
