Even more bug fixes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -38,51 +38,51 @@
     <script src="script.js"></script>
 </body>
 
-<style>
-    /*for normal content*/
-    body {
-        background-color: white;
-    }
-    a:link{
-        color: white;
-    }
-    a:visited{
-        color: orange;
-    }
-    a:hover{
-        color: blue;
-    }
-    a{
-        text-decoration: none;
-        padding: 30px;
-    }
-    .img {
-        width: 526px;
-        height: 314px;
-    }
-    .a{
-        text-decoration: none;
-        padding: 0px !important;
-        color: orange !important;
-        font-size: 16px;
-    }
-    /*for flexbox*/
-    .container {
-        display: flex;
-	    width: 100%;
-        flex-flow: row wrap;
-        justify-content: space-around;
-        margin: 50px;
+    <style>
+        /*for normal content*/
+        body {
+            background-color: white;
+        }
+        a:link{
+            color: white;
+        }
+        a:visited{
+            color: orange;
+        }
+        a:hover{
+            color: blue;
+        }
+        a{
+            text-decoration: none;
+            padding: 30px;
+        }
+        .img {
+            width: 526px;
+            height: 314px;
+        }
+        .a{
+            text-decoration: none;
+            padding: 0px !important;
+            color: orange !important;
+            font-size: 16px;
+        }
+        /*for flexbox*/
+        .container {
+            display: flex;
+	        width: 100%;
+            flex-flow: row wrap;
+            justify-content: space-around;
+            margin: 50px;
       
-    }
-    .flex1 {
-        background-color: black; 
-        font-family: Arial;
-    }
-    .flex2 { 
-        font-family: Arial;
-        font-size: 24px;
-    }
-</style>
+        }
+        .flex1 {
+            background-color: black; 
+            font-family: Arial;
+        }
+        .flex2 { 
+            font-family: Arial;
+            font-size: 24px;
+        }
+    </style>
 
 </html>
