--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,7 +7,7 @@
     <link href="normalize.css" rel="stylesheet" type="text/css" />
   </head>
 
-  <body>
+<body>
     <nav class = "flex1">
 
         <a href ="index.html"><img src = "Images/J-image.jpg" alt = "jimage" style="width:65px;height:65px;"></a>
@@ -17,6 +17,7 @@
         <a href="contact.html">Contact Me</a>
 
     </nav>
+</body>
 
     <section>
         <header>About Me</header>
@@ -63,5 +64,5 @@
 
 
     <script src="script.js"></script>
-  </body>
+  
 </html>
