--- a/about.html
+++ b/about.html
@@ -21,6 +21,24 @@
 
     <section>
         <header>About Me</header>
+        <p>I'm Josiah Low, a student from Ngee Ann Polytechnic.</p>
+        <p1>
+            I am currently pursuing a Diploma in Information Technology (IT). 
+            As time goes on, the need for IT related jobs has increased, and
+            that influenced me to take the course that I'm taking now.
+        </p1>
+        <p2>
+            I enjoy solving problems, so taking an IT course has truly helped
+            to fulfil that enjoyment. Aside from solving problems, I am also 
+            capable of staying on task. I would work at the given problem 
+            until I either managed to find the right answer or explanation to
+            the question.
+        </p2>
+        <p3>
+            Despite being an introvert, I am willing to go out of my comfort 
+            zone to work with others, and to learn and grow together. I believe
+            that these skills will help me especially during any team projects. 
+        </p3>
     </section>
 
     <style>
