Added Work Exp, Flexboxes and changed some css

--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@
             color: white;
         }
         a:visited{
-            color: orange;
+            color: white;
         }
         a:hover{
-            color: blue;
+            color: orange;
         }
         a{
             text-decoration: none;
