--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             color: white;
         }
         a:visited{
-            color: orange;
+            color: white;
         }
         a:hover{
-            color: blue;
+            color: orange;
         }
         a{
             text-decoration: none;
