Added a few more paragraphs to the Projects page

--- a/project.html
+++ b/project.html
@@ -30,6 +30,13 @@
                 and that was to create a simple loading bar, as seen
                 in the picture.
                 </p>
+                <p>Challenges faced: I struggled initially to get the rainbow to move with the cat. 
+                    After researching for a while, I was finally able to solve the problem.
+                </p>
+                <p>
+                    Successes: I was able to get the cat and rainbow to move together to eventually 
+                    complete the Loading Bar.
+                </p>
             </div>
             <a href = "https://nyan-cat-loading-bar.jlow03.repl.co/" target = "_blank"><img class = "img" src = "Images/Nyan.png" alt = "nyan"></a>
         </article>
