--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
         <a href="about.html">About</a>
         <a href="project.html">Projects</a>
         <a href="contact.html">Contact Me</a>
+        <a class = "a2" href ="selection.html"><img src = "Images/ham2.png" alt = "menu"></a>
 
     </nav>
 
@@ -92,7 +93,9 @@
             text-decoration: none;
             padding: 30px;
         }
-         
+        .a2{
+            display: none;
+        }
 
         /*for flexbox*/
         .container {
@@ -119,6 +122,63 @@
             display:flex;
             width: 100%;
             flex-direction: row;
+        }
+
+        /* mobile view*/
+        @media only screen 
+        and (min-device-width: 375px) 
+        and (max-device-width: 812px) 
+        and (-webkit-min-device-pixel-ratio: 3) {
+        body {
+            background-color: white;
+        }
+        a:link{
+            color: white;
+        }
+        a:visited{
+            color: white;
+        }
+        a:hover{
+            color: orange;
+        }
+        a{
+            display: none;
+            text-decoration: none;
+            padding: 30px;
+        }
+        .a2{
+            display: flex;
+            width: 10px; 
+            height: 25px;
+        }
+
+        /*for flexbox*/
+        .container {
+          display: flex;
+          width: 100%; 
+          flex-direction: row; 
+               
+        }
+        .flex1 {
+            background-color: black; 
+            font-family: Arial;
+        }
+        .flex2 { 
+          font-family: Arial;
+          font-size: 18px;          
+        }
+        .con {
+            display: flex;
+            width: 100%; 
+            flex-direction: row;
+            justify-content: space-around;
+        }
+        div{
+            display:flex;
+            width: 100%;
+            flex-direction: row;
+        }
+
         }
     </style>
   
