--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
         <a href="about.html">About</a>
         <a href="project.html">Projects</a>
         <a href="contact.html">Contact Me</a>
+        <a class = "a2" href ="selection.html"><img src = "Images/ham2.png" alt = "menu"></a>
 
     </nav>
 
@@ -77,6 +78,9 @@
             text-decoration: none;
             padding: 30px;
         }
+        .a2{
+            display: none;
+        }
         .textb{
             width: 500px;
             height: 30px;
@@ -112,6 +116,69 @@
             align-items: center;
         }
 
+        /* mobile view*/
+        @media only screen 
+        and (min-device-width: 375px) 
+        and (max-device-width: 812px) 
+        and (-webkit-min-device-pixel-ratio: 3) {
+        body {
+            background-color: white;
+        }
+        a:link{
+            color: white;
+        }
+        a:visited{
+            color: white;
+        }
+        a:hover{
+            color: orange;
+        }
+        a{
+            display: none;
+            text-decoration: none;
+            padding: 30px;
+        }
+        .a2{
+            display: flex;
+            width: 10px; 
+            height: 25px;
+        }
+        .textb{
+            width: 500px;
+            height: 30px;
+            border-style: solid;
+            border-radius: 10px;
+            background-color: silver;
+        }
+        .flex1 {
+            background-color: black; 
+            font-family: Arial;
+        }
+        .flex2 { 
+            font-family: Arial;
+            font-size: 18px;
+        }
+        .button{
+            background-color: silver;
+            border-radius: 10px;
+            color: black;
+            padding: 9px 28px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 18px;
+        }
+        /*for flexbox*/
+
+        .con{
+            display:flex;
+            width: 100%;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        }
     </style>
 
 </html>
