--- a/project.html
+++ b/project.html
@@ -15,6 +15,8 @@
         <a href="about.html">About</a>
         <a href="project.html">Projects</a>
         <a href="contact.html">Contact Me</a>
+        <a class = "a2" href ="selection.html"><img src = "Images/ham2.png" alt = "menu"></a>
+
     </nav>
 
     <section>
@@ -62,6 +64,9 @@
             text-decoration: none;
             padding: 30px;
         }
+        .a2{
+            display: none;
+        }
          
 
         /*for flexbox*/
@@ -86,6 +91,62 @@
         .img{
             width: 453px;
             height: 246px;
+        }
+
+        /* mobile view*/
+        @media only screen 
+        and (min-device-width: 375px) 
+        and (max-device-width: 812px) 
+        and (-webkit-min-device-pixel-ratio: 3) {
+        body {
+            background-color: white;
+        }
+        a:link{
+            color: white;
+        }
+        a:visited{
+            color: white;
+        }
+        a:hover{
+            color: orange;
+        }
+        a{
+            display: none;
+            text-decoration: none;
+            padding: 30px;
+        }
+        .a2{
+            display: flex;
+            width: 10px; 
+            height: 25px;
+        }
+         
+
+        /*for flexbox*/
+        .container {
+            display: flex;
+            width: 100%;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+        .flex1 {
+            background-color: black; 
+            font-family: Arial;
+        }
+        .flex2 { 
+            font-family: Arial;
+            font-size: 24px;
+        }
+        .flex3{
+            font-family: Arial;
+            font-size: 16px;
+        }
+        .img{
+            width: 453px;
+            height: 246px;
+        }
+
+
         }
     </style>
   
