Modified the index about& project pages for mobile

--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
         /* mobile view*/
         @media only screen 
         and (min-device-width: 375px) 
-        and (max-device-width: 812px) 
+        and (max-device-width: 1024px) 
         and (-webkit-min-device-pixel-ratio: 3) {
         body {
             background-color: white;
@@ -170,7 +170,7 @@
         .con {
             display: flex;
             width: 100%; 
-            flex-direction: row;
+            flex-direction: column;
             justify-content: space-around;
         }
         div{
