--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
         <header class = "flex2">
             <h1> Hello, </h1>
-            <p> I'm Josiah, a Singaporean Student who is keen </p>
-            <p>to learn more about the Technology Industry. </p>
+            <p> I'm Josiah, a Singaporean Student who is keen
+            to learn more about the Technology Industry. </p>
             <a class = a href="about.html">Learn More ></a>
 
         </header>
@@ -89,7 +89,7 @@
         /* mobile view*/
         @media only screen 
         and (min-device-width: 375px) 
-        and (max-device-width: 812px) 
+        and (max-device-width: 1024px) 
         and (-webkit-min-device-pixel-ratio: 3) {
         body {
             background-color: white;
