Modified contact page for mobile view

--- a/contact.html
+++ b/contact.html
@@ -151,6 +151,8 @@
             background-color: silver;
         }
         .flex1 {
+            display: flex;
+            width: 150%;
             background-color: black; 
             font-family: Arial;
         }
@@ -173,9 +175,9 @@
         .con{
             display:flex;
             width: 100%;
-            flex-direction: row;
+            flex-direction: column;
             justify-content: space-around;
-            align-items: center;
+            align-items: flex-start;
         }
 
         }
