--- a/project.html
+++ b/project.html
@@ -39,6 +39,7 @@
                     Successes: I was able to get the cat and rainbow to move together to eventually 
                     complete the Loading Bar.
                 </p>
+                <p>Click the image to see it run.</p>
             </div>
             <a class = "a" href = "https://nyan-cat-loading-bar.jlow03.repl.co/" target = "_blank"><img class = "img" src = "Images/Nyan.png" alt = "nyan"></a>
         </article>
