Fixing more errors

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,9 @@
             text-decoration: none;
             padding: 30px;
         }
+        .a{
+            display: flex;
+        }
         .a2{
             display: none;
         }
@@ -82,6 +85,9 @@
             display: none;
             text-decoration: none;
             padding: 30px;
+        }
+        .a{
+            display: flex;
         }
         .a2{
             display: flex;
@@ -144,7 +150,7 @@
     <section class = "con">
         <footer class = "flex2">
             <h1>Contact Me</h1>
-            <form action = "/some-url" method = "POST">
+            <form action = "contact.html" method = "POST">
   
             <label for = "text">Name:</label>
             <br>
@@ -175,9 +181,9 @@
 
         <aside class = "flex2">
             <h2>Other ways to contact me:</h2>
-            <p>Email: <a href= "mailto:S10204535@connect.np.edu.sg" style = "color: blue;">S10204535@connect.np.edu.sg</a></p>
-            <p>Instagram: <a href = "https://www.instagram.com/j.low03/" target = "_blank"><img src = "Images/Insta.png" alt = "Instagram" style = "width:35px; height:35px;"></a></p>
-            <p>LinkedIn: <a href = "https://www.linkedin.com/in/low-josiah-7a29821a6/" target = "_blank"><img src = "Images/Link.png" alt = "LinkedIn" style = "width:35px; height:35px;"></a></p>
+            <p>Email: <a class = "a" href= "mailto:S10204535@connect.np.edu.sg" style = "color: blue;">S10204535@connect.np.edu.sg</a></p>
+            <p>Instagram: <a class = "a" href = "https://www.instagram.com/j.low03/" target = "_blank"><img src = "Images/Insta.png" alt = "Instagram" style = "width:35px; height:35px;"></a></p>
+            <p>LinkedIn: <a class = "a" href = "https://www.linkedin.com/in/low-josiah-7a29821a6/" target = "_blank"><img src = "Images/Link.png" alt = "LinkedIn" style = "width:35px; height:35px;"></a></p>
         </aside>
     </section>
 </body>
